@@ -10,6 +10,7 @@ import com.koliving.api.auth.login.LoginFilter;
 import com.koliving.api.auth.login.LoginProvider;
 import com.koliving.api.auth.login.LoginSuccessHandler;
 import jakarta.annotation.PostConstruct;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.security.servlet.PathRequest;
@@ -21,7 +22,9 @@ import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.config.annotation.ObjectPostProcessor;
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configuration.WebSecurityCustomizer;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.AuthenticationEntryPoint;
 import org.springframework.security.web.SecurityFilterChain;
@@ -29,8 +32,13 @@ import org.springframework.security.web.access.AccessDeniedHandler;
 import org.springframework.security.web.authentication.logout.LogoutFilter;
 import org.springframework.security.web.authentication.logout.SimpleUrlLogoutSuccessHandler;
 import org.springframework.security.web.header.HeaderWriterFilter;
+import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.validation.beanvalidation.LocalValidatorFactoryBean;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+@EnableWebSecurity
 @Configuration
 @RequiredArgsConstructor
 public class SecurityConfig {
@@ -58,74 +66,63 @@ public class SecurityConfig {
     @PostConstruct
     private void init() {
         AUTHENTICATION_WHITELIST = new String[]{
-                "/api/" + apiVersion + "/auth/**",
-                "/api/" + apiVersion +"/management/**",
-                "/api/" + apiVersion + "/locations",
-                "/api-docs/**",
-                "/swagger-ui/**",
-                "/swagger-resources/**"
+            "/api/" + apiVersion + "/auth/**",
+            "/api/" + apiVersion + "/management/**",
+            "/api/" + apiVersion + "/locations",
+            "/api-docs/**",
+            "/swagger-ui/**",
+            "/swagger-resources/**"
         };
 
         AUTHORIZATION_WHITELIST = new String[]{
-                "/api/" + apiVersion + "/login",
-                "/api/" + apiVersion + "/logout"
+            "/api/" + apiVersion + "/login",
+            "/api/" + apiVersion + "/logout"
         };
-    }
-
-    @Bean
-    public WebSecurityCustomizer webSecurityCustomizer() {
-        return web -> web.ignoring()
-                            .requestMatchers(PathRequest.toStaticResources().atCommonLocations())
-                            .requestMatchers(AUTHENTICATION_WHITELIST);
     }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-//        http.formLogin().disable();
-//        http.httpBasic().disable();
-//        http.csrf().disable();
-//        http.cors().disable();
-
-        http.formLogin(config -> config.disable());
-        http.httpBasic(config -> config.disable());
-        http.csrf(config -> config.disable());
-        http.cors(cors -> cors.disable());
-
-        http.sessionManagement((session) -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
-
-        http.authorizeHttpRequests(req ->  {
-            req
-                .requestMatchers(AUTHENTICATION_WHITELIST).permitAll()
-                .requestMatchers(AUTHORIZATION_WHITELIST).permitAll()
-                .anyRequest().authenticated();
-        });
-
-        http.logout(config -> {
-            config.logoutUrl("/api/v1/logout")
-                  .logoutSuccessUrl("/api/v1/login")
-                  .logoutSuccessHandler(logoutSuccessHandler);
-        });
-
-        http.exceptionHandling(config -> {
-            config.authenticationEntryPoint(authenticationEntryPoint)
-                  .accessDeniedHandler(accessDeniedHandler);
-        });
-
         AuthenticationManager authenticationManager = authenticationManager(loginProvider);
 
         CustomExceptionHandlerFilter customExceptionHandlerFilter = createExceptionHandlerFilter();
         LoginFilter loginFilter = createLoginFilter(authenticationManager);
         JwtAuthenticationFilter jwtAuthenticationFilter = createJwtAuthenticationFilter();
 
-        http.addFilterBefore(customExceptionHandlerFilter, HeaderWriterFilter.class)
-                .addFilterAfter(loginFilter, LogoutFilter.class)
-                .addFilterAfter(jwtAuthenticationFilter, loginFilter.getClass());
+        http.cors().configurationSource(corsConfigurationSource())
+            .and()
+            .headers()
+            .frameOptions().disable()
+            .and()
+            .formLogin(AbstractHttpConfigurer::disable)
+            .httpBasic(AbstractHttpConfigurer::disable)
+            .csrf(csrf -> csrf.ignoringRequestMatchers(AntPathRequestMatcher.antMatcher("/h2-console/**")))
+            .sessionManagement((session) -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .authorizeHttpRequests(req -> {
+                req
+                    .requestMatchers(AntPathRequestMatcher.antMatcher("/h2-console/**")).permitAll()
+                    .requestMatchers(AUTHENTICATION_WHITELIST).permitAll()
+                    .requestMatchers(AUTHORIZATION_WHITELIST).permitAll()
+                    .anyRequest().authenticated();
+            })
+            .logout(config -> {
+                config.logoutUrl("/api/v1/logout")
+                    .logoutSuccessUrl("/api/v1/login")
+                    .logoutSuccessHandler(logoutSuccessHandler);
+            }).exceptionHandling(config -> {
+                config.authenticationEntryPoint(authenticationEntryPoint)
+                    .accessDeniedHandler(accessDeniedHandler);
+            });
+        //TODO filter 순서 조정 필요
+//            .addFilterBefore(customExceptionHandlerFilter, HeaderWriterFilter.class)
+//            .addFilterAfter(loginFilter, LogoutFilter.class)
+//            .addFilterAfter(jwtAuthenticationFilter, loginFilter.getClass());
 
         return http.build();
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationProvider... authenticationProviders) throws Exception {
+    public AuthenticationManager authenticationManager(AuthenticationProvider... authenticationProviders)
+        throws Exception {
         AuthenticationManagerBuilder builder = new AuthenticationManagerBuilder(objectPostProcessor);
 
         for (AuthenticationProvider provider : authenticationProviders) {
@@ -135,15 +132,16 @@ public class SecurityConfig {
         return builder.build();
     }
 
-//    @Bean
-//    CorsConfigurationSource corsConfigurationSource() {
-//        CorsConfiguration configuration = new CorsConfiguration();
-//        configuration.setAllowedOrigins(Collections.singletonList("*"));
-//        configuration.setAllowedMethods(Collections.singletonList("*"));
-//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-//        source.registerCorsConfiguration("/**", configuration);
-//        return source;
-//    }
+    @Bean
+    CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedMethods(List.of("*"));
+        configuration.setAllowedHeaders(List.of("*"));
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        return source;
+    }
 
     private CustomExceptionHandlerFilter createExceptionHandlerFilter() {
         return new CustomExceptionHandlerFilter(objectMapper, messageSource, localeResolver);
